<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/form_header"
            android:textSize="20sp"
            android:textStyle="bold" />
        
		 <TextView
            android:id="@+id/TextViewSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/form_sex" /> 

        <RadioGroup
            android:id="@+id/RadioGroupSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:gravity="center" >

            <RadioButton
                android:id="@+id/Masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/form_masc" />

            <RadioButton
                android:id="@+id/Feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_fem" />
        </RadioGroup>
        
        <EditText
            android:id="@+id/EditTextAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_age"
            android:inputType="number"
            android:layout_marginTop="10dp"
             >

        </EditText>
        
        <TextView
            android:id="@+id/TextViewQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/form_q" />
         
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:gravity="center"
            android:id="@+id/RadioGroupDiag"
             >

            <RadioButton
                android:id="@+id/FormYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_yes" />

            <RadioButton
                android:id="@+id/FormNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/form_no" />
        </RadioGroup>
        
        <EditText
		    android:id="@+id/EditTextFeedbackBody"
		    android:layout_height="wrap_content"
		    android:hint="@string/form_sug"
		    android:inputType="textMultiLine"
		    android:lines="5"
		    android:layout_width="fill_parent">
		</EditText>
        
        
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_send"
            android:layout_marginTop="10dp" >
        </Button>
    </LinearLayout>
 
</ScrollView>