<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/resultado_textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="-100dp"
        android:text="@string/result_0"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/result_desc"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/result_0_desc"
        android:textSize="20sp" />

    <Button
        android:id="@+id/repeat_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/repeat_test" />

</LinearLayout>